--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@ Although we now routinely sequence human genomes, we cannot yet confidently iden
 %\end{dedication}
 
 \begin{acknowledgements}
-The author would like to thank Fritz Roth, Atina Cote, Jennifer Knapp, Song Sun, Marta Verby, Yingzhou Wu, Cassandra Wong, Fan Yang, Carles Pons, Patrick Aloy, Natascha van Lieshout, Anjali Gopal, Jesse Bloom, Guihong Tan, Joseph Mellor, Shan Yang, Robert Nussbaum, Douglas Fowler, Nidhi Sahni, Marc Vidal, David Hill, Amy Caudy, Lincoln Stein, and Igor Stagljar for their collaboration, help and advice. The Roth Lab also gratefully acknowledges funding by the National Institutes of Health, the Canadian Excellence Research Chair, the Canadian Institute for Advanced Research and the Ontario Ministry of Research, Innovation and Science. 
+The author would like to thank Fritz Roth, Atina Cot\'e, Jennifer Knapp, Song Sun, Marta Verby, Yingzhou Wu, Cassandra Wong, Fan Yang, Carles Pons, Patrick Aloy, Natascha van Lieshout, Anjali Gopal, Jesse Bloom, Guihong Tan, Joseph Mellor, Shan Yang, Robert Nussbaum, Douglas Fowler, Nidhi Sahni, Marc Vidal, David Hill, Amy Caudy, Lincoln Stein, and Igor Stagljar for their collaboration, help and advice. Furthermore, the author gratefully acknowledges funding to the Roth Lab by the National Institutes of Health, the Canadian Excellence Research Chairs Program, the Canadian Institute for Advanced Research and the Ontario Ministry of Research, Innovation and Science. 
 \end{acknowledgements}
 
 \tableofcontents
