--- a/thesis.bib
+++ b/thesis.bib
@@ -2689,3 +2689,40 @@ PML and several other proteins localizing in PML-nuclear bodies (PML-NB) contai
 	keywords = {Apoptosis, Binding Sites, Cell Nucleus, Gene Expression Regulation, Enzymologic, Gene Expression Regulation, Neoplastic, HeLa Cells, Humans, Jurkat Cells, K562 Cells, Matrix Attachment Region Binding Proteins, Microscopy, Confocal, Models, Biological, SUMO-1 Protein, Transcription, Genetic, Two-Hybrid System Techniques},
 	pages = {18124--18134}
 }
+
+@article{tasan_selecting_2015,
+	title = {Selecting causal genes from genome-wide association studies via functionally coherent subnetworks},
+	volume = {12},
+	copyright = {© 2014 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1548-7091},
+	url = {http://www.nature.com.myaccess.library.utoronto.ca/nmeth/journal/v12/n2/full/nmeth.3215.html#ref3},
+	doi = {10.1038/nmeth.3215},
+	abstract = {Genome-wide association (GWA) studies have linked thousands of loci to human diseases, but the causal genes and variants at these loci generally remain unknown. Although investigators typically focus on genes closest to the associated polymorphisms, the causal gene is often more distal. Reliance on published work to prioritize candidates is biased toward well-characterized genes. We describe a 'prix fixe' strategy and software that uses genome-scale shared-function networks to identify sets of mutually functionally related genes spanning multiple GWA loci. Using associations from {\textasciitilde}100 GWA studies covering ten cancer types, our approach outperformed the common alternative strategy in ranking known cancer genes. As more GWA loci are discovered, the strategy will have increased power to elucidate the causes of human disease.},
+	language = {en},
+	number = {2},
+	urldate = {2017-04-03},
+	journal = {Nature Methods},
+	author = {Taşan, Murat and Musso, Gabriel and Hao, Tong and Vidal, Marc and MacRae, Calum A. and Roth, Frederick P.},
+	month = feb,
+	year = {2015},
+	keywords = {Computational biology and bioinformatics, functional genomics, Genetics research, genome-wide association studies},
+	pages = {154--159},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/AK7TM2GG/Taşan et al. - 2015 - Selecting causal genes from genome-wide associatio.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/AC43W4MZ/nmeth.3215.html:text/html}
+}
+
+@article{chakravarti_distilling_2013,
+	title = {Distilling {Pathophysiology} from {Complex} {Disease} {Genetics}},
+	volume = {155},
+	issn = {0092-8674},
+	url = {http://www.sciencedirect.com/science/article/pii/S0092867413010921},
+	doi = {10.1016/j.cell.2013.09.001},
+	abstract = {Technologies for genome-wide sequence interrogation have dramatically improved our ability to identify loci associated with complex human disease. However, a chasm remains between correlations and causality that stems, in part, from a limiting theoretical framework derived from Mendelian genetics and an incomplete understanding of disease physiology. Here we propose a set of criteria, akin to Koch’s postulates for infectious disease, for assigning causality between genetic variants and human disease phenotypes.},
+	number = {1},
+	urldate = {2017-04-03},
+	journal = {Cell},
+	author = {Chakravarti, Aravinda and Clark, Andrew G. and Mootha, Vamsi K.},
+	month = sep,
+	year = {2013},
+	pages = {21--26},
+	file = {ScienceDirect Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/8DJDS4PQ/Chakravarti et al. - 2013 - Distilling Pathophysiology from Complex Disease Ge.pdf:application/pdf;ScienceDirect Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/H6KXH23V/S0092867413010921.html:text/html}
+}
